--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
     <!-- My CSS and Icons-->
-    <link rel="stylesheet" href="../static/styles/main.css">
-    <link rel="shortcut icon" href="../static/images/favicon.ico">
+    <link rel="stylesheet" href="static/styles/main.css">
+    <link rel="shortcut icon" href="static/images/favicon.ico">
 
     <title>Hello, world!</title>
   </head>
